Fix mobile bug where navbar was covering content

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,8 +3,16 @@
 
 /* application-wide */
 
-body {
+@media (max-width: 767px) {
+ body {
+  padding-top: 180px;
+ }   
+}
+
+@media (min-width: 768px) {
+ body {
   padding-top: 60px;
+ } 
 }
 
 .center {
